exports[`Actions: User action creators creates correct ADD_ORG object 1`] = `
Object {
  "payload": "galactic-federation",
  "type": "ADD_ORG",
}
`;

exports[`Actions: User action creators creates correct ADD_ORGANIZATIONS object 1`] = `
Object {
  "payload": Array [
    "Galactic Federation",
    "Council Of Ricks",
  ],
  "type": "ADD_ORGANIZATIONS",
}
`;

exports[`Actions: User action creators creates correct CLEAR_USER_CREDENTIALS object 1`] = `
Object {
  "type": "CLEAR_USER_CREDENTIALS",
}
`;

exports[`Actions: User action creators creates correct SAVE_ACCESS_TOKEN object 1`] = `
Object {
  "payload": "token",
  "type": "SAVE_ACCESS_TOKEN",
}
`;

exports[`Actions: User action creators creates correct SAVE_USERNAME object 1`] = `
Object {
  "payload": "token",
  "type": "SAVE_USERNAME",
}
`;

exports[`Actions: User action creators creates correct SAVE_USERNAME object 2`] = `
Object {
  "payload": "token",
  "type": "SAVE_USERNAME",
}
`;

exports[`Actions: User action creators creates correct SET_AVATAR_URL object 1`] = `
Object {
  "payload": "https://foobar.com/quxbaz",
  "type": "SET_AVATAR_URL",
}
`;

exports[`Actions: User action creators creates correct SET_SNIPPET_LISTS object 1`] = `
Object {
  "payload": Array [
    "list",
    "of",
    "snippets",
  ],
  "type": "SET_SNIPPET_LISTS",
}
`;

exports[`Actions: User action creators creates correct SET_USER_SNIPPETS object 1`] = `
Object {
  "payload": Array [
    "list",
    "of",
    "snippets",
  ],
  "type": "SET_USER_SNIPPETS",
}
`;

exports[`Actions: User action creators creates correct SET_USER_SNIPPETS object 2`] = `
Object {
  "payload": Array [
    Object {
      "language": "Python 3",
      "lastEdited": "2017-04-05T12:52:20.099Z",
      "private": true,
      "snippetName": "Test Snippet",
    },
  ],
  "type": "SET_USER_SNIPPETS",
}
`;

exports[`Actions: User action creators creates correct SWITCH_ORG object 1`] = `
Object {
  "payload": "galactic-federation",
  "type": "SWITCH_ORG",
}
`;

exports[`Actions: User async actions UPDATE_USER_SNIPPETS dispatches UPDATE_USER_SNIPPETS_FAILED if unsuccessful 1`] = `Array []`;

exports[`Actions: User async actions UPDATE_USER_SNIPPETS dispatches correct actions if successful 1`] = `
Array [
  Object {
    "payload": Object {
      "test_snippet_1": Object {
        "language": "Python 3",
        "lastEdited": "2017-04-05T12:52:20.099Z",
        "private": true,
        "snippetName": "Test Snippet 1",
      },
      "test_snippet_2": Object {
        "language": "Python 3",
        "lastEdited": "2017-04-05T12:52:20.099Z",
        "private": true,
        "snippetName": "Test Snippet 2",
      },
    },
    "type": "SET_USER_SNIPPETS",
  },
]
`;
